[package]
name = "spectra"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "spectra"
path = "src/lib.rs"

[[bin]]
name = "spectra"
path = "src/main.rs"

[dependencies]
simple-markdown-parser = { git = "https://github.com/kaleidawave/simple-markdown-parser", version = "0.0.7", branch = "improvements" }
pretty_assertions = "1.4.1"
crossterm = "0.29.0"
colored = "3.0.0"
lahl = "0.0.3"
simple-yaml-parser = "0.0.1"
json-builder-macro = "0.0.3"
libloading = "0.9.0"
glob = "0.3.3"

[lints.clippy]
pedantic = "warn"

[package.metadata.commands]
example = "cargo run -- test ./examples/specification.uppercase.md 'cargo run -q --example example_stdin_stdout_program -- --uppercase --interactive --rpc'"
example-intentional-crash = "cargo run -- test ./examples/specification.uppercase.md 'cargo run -q --example example_stdin_stdout_program -- --uppercase --interactive --rpc --intentional-crash'"
example-rust = "cargo run -- test ./examples/specification.uppercase.md 'rust:examples/rust-runner::get_result'"
